--- a/portfolio/src/laravel_reason/composer.json
+++ b/portfolio/src/laravel_reason/composer.json
@@ -9,7 +9,8 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.14",
+        "laravel/passport": "^11.10",
+        "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
