--- a/portfolio/src/laravel_reason/package.json
+++ b/portfolio/src/laravel_reason/package.json
@@ -17,6 +17,8 @@
         "vue": "^3.3.9"
     },
     "dependencies": {
+        "js-cookie": "^3.0.5",
+        "vue-cookies": "^1.8.3",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.2.5",
         "vuex": "^4.0.2"
