--- a/portfolio_project/project_Clothing/laravel_empty/package.json
+++ b/portfolio_project/project_Clothing/laravel_empty/package.json
@@ -20,6 +20,7 @@
         "vue-loader": "^17.3.1"
     },
     "dependencies": {
+        "vue-cookies": "^1.8.3",
         "vue-router": "^4.2.5",
         "vuex": "^4.1.0"
     }
